[gd_scene load_steps=23 format=3 uid="uid://mgbkded0kwd5"]

[ext_resource type="Script" path="res://Levels/first_button.gd" id="1_lwi0u"]
[ext_resource type="PackedScene" uid="uid://csg7h6jwhtt3b" path="res://Scenes/platform.tscn" id="1_oni34"]
[ext_resource type="PackedScene" uid="uid://c27k478gxu8bx" path="res://Scenes/player.tscn" id="2_rrrrs"]
[ext_resource type="PackedScene" uid="uid://briu0fuadh25y" path="res://Scenes/onbutton.tscn" id="3_rvs1j"]
[ext_resource type="PackedScene" uid="uid://ddl5ibdcryb5b" path="res://Scenes/deathplane.tscn" id="4_tfx2g"]
[ext_resource type="PackedScene" uid="uid://dvwons2rfkk6c" path="res://Backgrounds/funny_background_2.tscn" id="5_wrv8h"]
[ext_resource type="PackedScene" uid="uid://dnmwaogw4ptfy" path="res://Scenes/off_platform.tscn" id="6_edg5s"]
[ext_resource type="PackedScene" uid="uid://cnab4kdt2ummt" path="res://Scenes/teleporter.tscn" id="8_iwwt0"]
[ext_resource type="PackedScene" uid="uid://byu2ial1jsp01" path="res://Scenes/on_platform.tscn" id="9_u681n"]
[ext_resource type="PackedScene" uid="uid://dxlj86b2ptj4y" path="res://Scenes/Ball.tscn" id="10_4viy0"]
[ext_resource type="Texture2D" uid="uid://lk3y02h5pch3" path="res://Assets/imageedit_1_3010657052.png" id="11_mfq3h"]
[ext_resource type="PackedScene" uid="uid://cn23ftvmfda8d" path="res://Scenes/onbutton1.tscn" id="12_rp1fu"]
[ext_resource type="Texture2D" uid="uid://c53c6eyrbw2m1" path="res://Assets/imageedit_1_9386139496.png" id="12_vrgej"]
[ext_resource type="PackedScene" uid="uid://immk2cpy0s3l" path="res://Scenes/off_platform1.tscn" id="13_2k4ll"]
[ext_resource type="Script" path="res://Scenes/onbutton_1.gd" id="13_fxrva"]
[ext_resource type="Script" path="res://Scenes/off_platform_1.gd" id="15_jxcst"]
[ext_resource type="Script" path="res://Scenes/onbutton_2.gd" id="17_sfse5"]
[ext_resource type="Texture2D" uid="uid://bnerle1ndw74o" path="res://Assets/imageedit_3_8075767447.png" id="18_srw1g"]
[ext_resource type="PackedScene" uid="uid://ndapljhl15vh" path="res://Scenes/on_platform1.tscn" id="19_1qlni"]
[ext_resource type="Script" path="res://Scenes/onbutton_3.gd" id="20_vo0m8"]
[ext_resource type="PackedScene" uid="uid://4jp8t1cp6idv" path="res://Scenes/splash_screen.tscn" id="21_si2co"]
[ext_resource type="AudioStream" uid="uid://44gmyfmioeml" path="res://final soundtrack/Doot Doot Master (Platformer 1.5).mp3" id="22_euwny"]

[node name="FirstButton" type="Node3D"]
script = ExtResource("1_lwi0u")

[node name="Platform" parent="." instance=ExtResource("1_oni34")]
transform = Transform3D(10, 0, 0, 0, 1, 0, 0, 0, 10, 0.0676218, 0, 0.0486593)

[node name="Player" parent="." instance=ExtResource("2_rrrrs")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.146563, 0.437125, 0.346253)

[node name="deathplane" parent="." instance=ExtResource("4_tfx2g")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.631, -6, 8.99)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="deathplane"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.8725, 8.41118, -8.32253)

[node name="Background2" parent="deathplane" instance=ExtResource("5_wrv8h")]

[node name="Teleporter" parent="." instance=ExtResource("8_iwwt0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 10, -1.218, -80.004)

[node name="Platform3" parent="." instance=ExtResource("1_oni34")]
transform = Transform3D(10, 0, 0, 0, 2, 0, 0, 0, 10, -0.484835, -1.12977, -63.4494)

[node name="OnPlatform2" parent="." instance=ExtResource("9_u681n")]
transform = Transform3D(-2.18557e-07, -1, 0, 5, -4.37114e-08, 0, 0, 0, 5, -9.57, 314.083, -80)

[node name="OnPlatform3" parent="." instance=ExtResource("9_u681n")]
transform = Transform3D(0.240849, 0.998839, 0, -4.9942, 0.0481699, 0, 0, 0, 5, -4.685, 314.083, -80)

[node name="OnPlatform4" parent="." instance=ExtResource("9_u681n")]
transform = Transform3D(3.2737, -0.755853, 0, 3.77927, 0.654741, 0, 0, 0, 5, 14.576, 299.038, -80)

[node name="OnPlatform5" parent="." instance=ExtResource("9_u681n")]
transform = Transform3D(4.22631, 0.534352, 0, -2.67176, 0.845262, 0, 0, 0, 5, -7.74116, 306.582, -80)

[node name="OnPlatform6" parent="." instance=ExtResource("9_u681n")]
transform = Transform3D(5, 0, 0, 0, 1, 0, 0, 0, 5, -2.57, 304.305, -80)

[node name="OnPlatform7" parent="." instance=ExtResource("9_u681n")]
transform = Transform3D(-2.18557e-07, -1, 0, 5, -4.37114e-08, 0, 0, 0, 5, 0.23, 300.71, -80)

[node name="OnPlatform8" parent="." instance=ExtResource("9_u681n")]
transform = Transform3D(-2.18557e-07, -1, 0, 5, -4.37114e-08, 0, 0, 0, 5, 5.43, 300.71, -80)

[node name="OnPlatform9" parent="." instance=ExtResource("9_u681n")]
transform = Transform3D(5, 0, 0, 0, 1, 0, 0, 0, 5, 2.73, 298.51, -80)

[node name="OnPlatform10" parent="." instance=ExtResource("9_u681n")]
transform = Transform3D(-3.2737, -0.755853, 0, 3.77927, -0.654741, 0, 0, 0, 5, 14.576, 304.364, -80)

[node name="OffPlatform2" parent="." instance=ExtResource("6_edg5s")]
transform = Transform3D(5, 0, 0, 0, 1, 0, 0, 0, 5, -6.872, 311.846, -80)

[node name="OffPlatform3" parent="." instance=ExtResource("6_edg5s")]
transform = Transform3D(5, 0, 0, 0, 1, 0, 0, 0, 5, 2.93, 303.41, -80)

[node name="OffPlatform4" parent="." instance=ExtResource("6_edg5s")]
transform = Transform3D(4.89074, 0.207912, 0, -1.03956, 0.978148, 0, 0, 0, 5, 8.497, 302.937, -80)

[node name="OffPlatform5" parent="." instance=ExtResource("6_edg5s")]
transform = Transform3D(5, 0, 0, 0, 1, 0, 0, 0, 5, 8.251, 308.423, -80)

[node name="OffPlatform6" parent="." instance=ExtResource("6_edg5s")]
transform = Transform3D(5, 0, 0, 0, 1, 0, 0, 0, 5, 8.978, 296.717, -80)

[node name="Ball" parent="." instance=ExtResource("10_4viy0")]
transform = Transform3D(-2.95166, 0.153245, 0.514051, 0, 2.87497, -0.857065, -0.536407, -0.843253, -2.82864, -7, 20, -80)

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 7.15163, 3.92987, -69.5681)
texture = ExtResource("11_mfq3h")

[node name="Sprite3D2" type="Sprite3D" parent="."]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, -6.31115, 3.75896, -69.5681)
texture = ExtResource("12_vrgej")

[node name="Brother2" parent="." instance=ExtResource("12_rp1fu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.44419, 0.496715, -2.9972)
script = ExtResource("13_fxrva")

[node name="OffPlatform" parent="." instance=ExtResource("13_2k4ll")]
transform = Transform3D(10, 0, 0, 0, 1, 0, 0, 0, 10, 0, 300, -13.917)
script = ExtResource("15_jxcst")

[node name="Brother" parent="." instance=ExtResource("3_rvs1j")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.87056, -0.413643, -66.2524)

[node name="Brother3" parent="." instance=ExtResource("12_rp1fu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.572, 300.5, -17.008)
script = ExtResource("17_sfse5")

[node name="OffPlatform7" parent="." instance=ExtResource("13_2k4ll")]
transform = Transform3D(4, 0, 0, 0, 1, 0, 0, 0, 4, 9.773, 300, -23.593)

[node name="OffPlatform8" parent="." instance=ExtResource("13_2k4ll")]
transform = Transform3D(4, 0, 0, 0, 1, 0, 0, 0, 4, 14.563, 300, -31.683)

[node name="OffPlatform9" parent="." instance=ExtResource("13_2k4ll")]
transform = Transform3D(3, 0, 0, 0, 1, 0, 0, 0, 3, 23.041, 300, -33.633)

[node name="OffPlatform10" parent="." instance=ExtResource("13_2k4ll")]
transform = Transform3D(2, 0, 0, 0, 1, 0, 0, 0, 2, 24.123, 300, -43)

[node name="OffPlatform11" parent="." instance=ExtResource("13_2k4ll")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.2, 300, -49)

[node name="Sprite3D" type="Sprite3D" parent="OffPlatform11"]
transform = Transform3D(-0.4, 0, 3.49691e-08, 0, 0.4, 0, -3.49691e-08, 0, -0.4, 0.24831, 0.936681, -3.07767)
texture = ExtResource("18_srw1g")

[node name="OnPlatform" parent="." instance=ExtResource("19_1qlni")]
transform = Transform3D(10, 0, 0, 0, 1, 0, 0, 0, 3, 0, 299, -16.957)

[node name="OnPlatform11" parent="." instance=ExtResource("19_1qlni")]
transform = Transform3D(4, 0, 0, 0, 1, 0, 0, 0, 4, -10.285, 300, -20.995)

[node name="OnPlatform12" parent="." instance=ExtResource("19_1qlni")]
transform = Transform3D(3.5, 0, 0, 0, 1, 0, 0, 0, 3.5, -3.457, 300, -28.196)

[node name="OnPlatform13" parent="." instance=ExtResource("19_1qlni")]
transform = Transform3D(2.5, 0, 0, 0, 1, 0, 0, 0, 2.5, -10.292, 300, -34.577)

[node name="OnPlatform14" parent="." instance=ExtResource("19_1qlni")]
transform = Transform3D(10, 0, 0, 0, 1, 0, 0, 0, 10, -21.325, 300, -42.611)

[node name="Brother4" parent="." instance=ExtResource("12_rp1fu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -24.011, 300.5, -45.292)
script = ExtResource("20_vo0m8")

[node name="OnPlatform15" parent="." instance=ExtResource("19_1qlni")]
transform = Transform3D(3, 0, 0, 0, 1, 0, 0, 0, 3, -11.472, 300, -52.457)

[node name="OffPlatform12" parent="." instance=ExtResource("13_2k4ll")]
transform = Transform3D(5, 0, 0, 0, 1, 0, 0, 0, 5, -18.967, 296, -44.956)

[node name="OffPlatform13" parent="." instance=ExtResource("13_2k4ll")]
transform = Transform3D(-2.18557e-07, -1, 0, 5, -4.37114e-08, 0, 0, 0, 5, -16.859, 297.665, -44.83)

[node name="OffPlatform14" parent="." instance=ExtResource("13_2k4ll")]
transform = Transform3D(-2.18557e-07, -1, 0, 5, -4.37114e-08, 0, 0, 0, 5, -21.238, 297.665, -44.83)

[node name="OffPlatform15" parent="." instance=ExtResource("13_2k4ll")]
transform = Transform3D(9.55343e-15, 4.37114e-08, 5, 5, -4.37114e-08, 0, 2.18557e-07, 1, -2.18557e-07, -19.373, 297.665, -47.292)

[node name="Sprite3D" type="Sprite3D" parent="OffPlatform15"]
transform = Transform3D(-0.00172779, 0.0986978, 0.0159926, 4.43638e-08, -0.015995, 0.0987125, 0.0999851, 0.00170555, 0.000276316, 0, 0.54623, 0.0244286)
texture = ExtResource("18_srw1g")

[node name="splash_screen" parent="." instance=ExtResource("21_si2co")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_euwny")
